# tonic-hello-world

./: .gitignore  Cargo.toml  README.org  build.rs  flake.nix
schema/: hello_world.proto
